test/deca/syntax/invalid/decl_var_no_name.deca
// Description:
//    tests de programme incorrect syntaxiquement
//
// Resultats:
//    ligne 8 : Erreur, (manque nom pour déclaration)

{
    int = 2;
}